--- a/app/components/views/headers/header-home.html
+++ b/app/components/views/headers/header-home.html
@@ -3,13 +3,13 @@
   <nav class="navbar navbar-static-top home-nav">
     <!-- Navbar Right Menu -->
     <a href="/" class="register-login" id="register-login-button" >
-      <span class="glyphicon glyphicon-lock " aria-hidden="true"></span> Inicie Sesion/Registrarme
+      <!--fb:login-button size="xlarge" onlogin="checkLoginState();"></fb:login-button-->
+      <fb:login-button size="xlarge" ng-click="statusChangeCallback()"></fb:login-button>
     </a>
-	<div class="fb-login-button" data-max-rows="1" data-size="xlarge" data-show-faces="false" data-auto-logout-link="false">
-		<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-		</fb:login-button>
-	</div>
+
+    
   </nav>
+
 </header>
 
 <div ng-include="'components/views/modals/registerLogin.html'">
