Al hacer login te muestra la pantalla de usuario loqueado.

--- a/app/components/views/headers/header.html
+++ b/app/components/views/headers/header.html
@@ -1,112 +1,25 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title><%= title %></title>
-  <link rel='stylesheet' href='/dist/css/AdminLTE.min.css' />
-  <link rel='stylesheet' href='/dist/css/skins/skin-blue.min.css' />
-  <link rel='stylesheet' href='/bootstrap/css/bootstrap.min.css' />
-  <link rel='stylesheet' href='/stylesheets/style.css' />
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <script src="/plugins/jQuery/jQuery-2.1.4.min.js" type="text/javascript"></script>
-</head>
-<body class="skin-blue sidebar-mini fixed">
-  <div class="skin-blue sidebar-mini">
-    <div class="modal fade" id="modal-cambiar-clave">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title">Cambiar Contrase&ntilde;a</h4>
-          </div>
-          <div class="modal-body">
-              <form id="change-password-form" class="form-horizontal" action="users/changePassword" method="post" >
-                  <div class="form-group">
-                      <label for="password" class="col-sm-4
-                          control-label">Contrase&ntilde;a Actual</label>
-                      <div class="col-sm-8">
-                          <input type="password" class="form-control" id="password" name="password" placeholder="Clave Actual" autocomplete="off">
-                      </div>
-                  </div>
-                  <div class="form-group">
-                      <label for="newpassword" class="col-sm-4 control-label">Contrase&ntilde;a Nueva</label>
-                      <div class="col-sm-8">
-                          <input type="password" class="form-control" id="newpassword" name="newpassword" placeholder="Clave Nueva" autocomplete="off">
-                      </div>
-                  </div>
-                  <div class="form-group">
-                      <label for="confirmnewpassword" class="col-sm-4 control-label">Confirmar Nueva Contrase&ntilde;a</label>
-                      <div class="col-sm-8">
-                          <input type="password" class="form-control" id="confirmnewpassword" name="confirmnewpassword" placeholder="Confirmacion Clave Nueva" autocomplete="off">
-                      </div>
-                  </div>
-              </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-            <button type="submit" id="btn-guardar-clave" class="btn btn-primary btn-ok">Guardar Cambios</button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="modal fade" id="modal-borrar-cuenta">
-      <div class="modal-dialog">
-        <form id="delete-account-form" action="/users/deleteAccount" method="post" style="display: block;">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-              <h4 class="modal-title">Borrar Cuenta</h4>
-            </div>
-            <div class="modal-body">
-                    <div class="form-group">
-                        <p> Esta seguro que desea eliminar su cuenta? <b> nota: </b> Esta acción no se puede deshacer. </p> 
-                    </div>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-              <button type="submit" id="btn-borrar-cuenta" class="btn btn-primary btn-ok">Continuar</button>
-
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-    <header class="main-header">
-      <a href="/" class="logo">Online CV</a>
-      <nav class="navbar navbar-static-top">
-        <!-- Navbar Right Menu -->
-        <div class="navbar-custom-menu">
-          <ul class="nav navbar-nav">
-            <!-- User Account: style can be found in dropdown.less -->
-            <li class="dropdown user user-menu">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <img src="/dist/img/user2-160x160.jpg" class="user-image" alt="User Image"/>
-                <span class="hidden-xs"><%= user.name %> <%= user.lastname %></span>
-              </a>
-              <ul class="dropdown-menu">
-                <!-- Menu Footer-->
-                <li class="user-footer">
-                  <div class="">
-                    <a id="change-password" href="#" class="btn btn-default btn-flat btn-header" data-toggle="modal"data-target="#modal-cambiar-clave">Cambiar &#10; Contrase&ntilde;a</a>
-                  </div>
-                  <div class="">
-                    <a id="delete-account btn-header" href="#" class="btn btn-default btn-flat btn-header" data-toggle="modal"data-target="#modal-borrar-cuenta">Borrar Cuenta</a>
-                  </div>
-                  <div class="">
-                    <a id="logout" href="/users/logout" class="btn btn-default btn-flat btn-header">Logout</a>
-                  </div>
-                </li>
-              </ul>
+<header class="main-header">
+  <a href="/" class="logo">Online CV</a>
+  <nav class="navbar navbar-static-top">
+    <!-- Navbar Right Menu -->
+    <div class="navbar-custom-menu">
+      <ul class="nav navbar-nav">
+        <!-- User Account: style can be found in dropdown.less -->
+        <li class="dropdown user user-menu">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <img src="resources/dist/img/user2-160x160.jpg" class="user-image" alt="User Image"/>
+            <span class="hidden-xs">{{user.user_data.name}}{{' '}}{{user.user_data.lastname}}</span>
+          </a>
+          <ul class="dropdown-menu">
+            <!-- Menu Footer-->
+            <li class="user-footer">
+              <div class="">
+                <a id="logout" ng-click="fbLogOut()" class="btn btn-default btn-flat btn-header">{{'Logout'}}</a>
+              </div>
             </li>
           </ul>
-        </div>
-      </nav>
-    </header>
-    <div class="content-wrapper">
-    <% if (messages.length > 0) { %>
-        <div class="alert alert-danger" role="alert">
-          <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-          <span class="sr-only">Error:</span>
-          <%= messages %>
-        </div>
-   <% } %>
-
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
