--- a/app/components/views/partials/side-bar.html
+++ b/app/components/views/partials/side-bar.html
@@ -5,7 +5,7 @@
           <!-- user panel (Optional) -->
           <div class="user-panel">
             <div class="pull-left image">
-                <img src="/dist/img/user2-160x160.jpg" class="img-circle"
+                <img src="resources/dist/img/user2-160x160.jpg" class="img-circle"
               alt="User Image" style="max-width: none; margin-left: 10%"/>
             </div>
             <div class="pull-left info"></div>
@@ -19,22 +19,15 @@
             <li class="view-cv"><a href="/cvs/show"><span>Ver CV</span></a></li>
             <li class="edit-professional-info"><a href="/cvs/edit"><span>Editar Informacion Profesional</span></a></li>
             <li class="change-default-cv"><a href="/Users/change-cv"><span>Cambiar Tema</span></a></li>
-            <% if (user.is_admin) { %>
+            <div ng-switch on="user.user_data.is_admin">
+              <div ng-switch-when="true">
                 <li class="add-template"><a href="/admin/edit_template"><span>Agregar Tema</span></a></li>
                 <li class="edit-template"><a href="/admin/list_templates"><span>Editar Temas</span></a></li>
-            <% } %>
+              </div>
+            </div>
+                
           </ul><!-- /.sidebar-menu -->
 
         </div><!-- /.sidebar -->
     </div><!-- /.slimScrollDiv -->
 </aside><!-- /.main-sidebar -->
-
-<% if (typeof activeMenuItem !== 'undefined') { %>
-    <script type='text/javascript'>
-        $(document).ready(function() {
-            var c = '<%= activeMenuItem %>';
-            $('.sidebar-menu .'+ c).addClass('active');
-        });
-    </script>
-<% } %>
-
