Fix: Actualiza el estado de la página al hacer login o logout.

--- a/app/components/views/headers/header-home.html
+++ b/app/components/views/headers/header-home.html
@@ -3,7 +3,7 @@
   <nav class="navbar navbar-static-top home-nav">
     <!-- Navbar Right Menu -->
     <a href="/" class="register-login" id="register-login-button" >
-      <fb:login-button size="xlarge" ng-click="statusChangeCallback()"></fb:login-button>
+      <fb:login-button size="xlarge" onlogin="checkFBloginStatus()"></fb:login-button>
     </a>
   </nav>
 </header>
