--- a/app/components/views/partials/part-slider.html
+++ b/app/components/views/partials/part-slider.html
@@ -1,28 +1,7 @@
- <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" ng-controller="HomeController">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner " role="listbox">
-      <div class="item carousel-img" ng-class="{'active':$last}" ng-repeat="image in imagess">
-        <img class="carousel-img" ng-src="{{image.source}}">
-        <div class="carousel-caption">
-          ...
-        </div>
-      </div>
-    </div>
-
-    <!-- Controls -->
-    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+ <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <carousel interval="myInterval">
+    <slide class="item carousel-img" ng-repeat="slide in slides">
+      <img class="carousel-img" ng-src="{{slide.image}}">
+    </slide>
+  </carousel>
 </div>
