--- a/app/components/views/partials/side-bar.html
+++ b/app/components/views/partials/side-bar.html
@@ -14,7 +14,8 @@
           <!-- Sidebar Menu -->
           <ul class="sidebar-menu">
             <!-- Optionally, you can add icons to the links -->
-            <li class="view-profile"><a href="/Users/view-profile"><span>Ver perfil </span></a><</li>
+            <!--<li class="view-profile"><a href="/Users/view-profile"><span ng-click="viewProfile()">Ver perfil </span></a><</li>-->
+              <li class="view-profile"><a href="#" ng-click="viewProfile()"><span>Ver perfil </span></a></li>
             <li class="edit-profile"><a href="/Users/edit"><span>Editar Perfil</span></a><</li>
             <li class="view-cv"><a href="/cvs/show"><span>Ver CV</span></a></li>
             <li class="edit-professional-info"><a href="/cvs/edit"><span>Editar Informacion Profesional</span></a></li>
