--- a/app/components/views/partials/side-bar.html
+++ b/app/components/views/partials/side-bar.html
@@ -5,7 +5,7 @@
           <!-- user panel (Optional) -->
           <div class="user-panel">
             <div class="pull-left image">
-                <img src="resources/dist/img/user2-160x160.jpg" class="img-circle"
+                <img src="/resources/dist/img/user2-160x160.jpg" class="img-circle"
               alt="User Image" style="max-width: none; margin-left: 10%"/>
             </div>
             <div class="pull-left info"></div>
@@ -21,8 +21,9 @@
             <li class="change-default-cv"><a href="/Users/change-cv"><span>Cambiar Tema</span></a></li>
             <div ng-switch on="user.user_data.is_admin">
               <div ng-switch-when="true">
-                <li class="add-template"><a href="/admin/edit_template"><span>Agregar Tema</span></a></li>
-                <li class="edit-template"><a href="/admin/list_templates"><span>Editar Temas</span></a></li>
+                <li class="add-template"><a href="#"><span>Agregar Tema</span></a></li>
+                <li class="edit-template"><a href="#"><span>Editar Temas</span></a></li>
+                <li><a ng-href="/user/list"><span>Ver usuarios</span></a></li>
               </div>
             </div>
                 
