--- a/app/components/views/headers/header.html
+++ b/app/components/views/headers/header.html
@@ -36,5 +36,18 @@
             <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
         </div>
     </script>
+
+    <script type="text/ng-template" id="RolUser.html">
+        <div class="modal-header">
+            <h3 class="modal-title"> {{ "Aviso" }}</h3>
+        </div>
+        <div class="modal-body">
+            {{ "Está seguro que desea cambiar el rol de este usuario?" }}
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
+            <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+        </div>
+    </script>
   </nav>
 </header>
