--- a/app/components/views/partials/side-bar.html
+++ b/app/components/views/partials/side-bar.html
@@ -14,17 +14,11 @@
           <!-- Sidebar Menu -->
           <ul class="sidebar-menu">
             <!-- Optionally, you can add icons to the links -->
-            <!--<li class="view-profile"><a href="/Users/view-profile"><span ng-click="viewProfile()">Ver perfil </span></a><</li>-->
-              <li class="view-profile"><a ng-href="/user/profile"><span>Ver perfil </span></a></li><!--code added by Frank Perez -->
-            <!--li class="edit-profile"><a href="/Users/edit"><span>Editar Perfil</span></a><</li>
-            <li class="view-cv"><a href="/cvs/show"><span>Ver CV</span></a></li>
-            <li class="edit-professional-info"><a href="/cvs/edit"><span>Editar Informacion Profesional</span></a></li>
-            <li class="change-default-cv"><a href="/Users/change-cv"><span>Cambiar Tema</span></a></li-->
+              <li class="view-profile"><a ng-href="/user/profile"><span>Ver perfil </span></a></li>
             <div ng-switch on="user.user_data.is_admin" class="">
               <div ng-switch-when="true" class="">
-                <!--li class="add-template"><a href="#"><span>Agregar Tema</span></a></li>
-                <li class="edit-template"><a href="#"><span>Editar Temas</span></a></li-->
                 <li><a ng-href="/user/list"><span style="margin-left: 15px;">Ver usuarios</span></a></li>
+                <li><a ng-href="/template/add"><span style="margin-left: 15px;">Agregar plantilla</span></a></li>
               </div>
             </div>
                 
