--- a/app/components/views/partials/addTemplate.html
+++ b/app/components/views/partials/addTemplate.html
@@ -2,10 +2,10 @@
 
     <input type="hidden" ng-model="model.sesion_id" name="X-Session-Id" id="X-Session-Id"> 
     <div class="row">
-        <div class="form-group">
+        <div class="form-group"> 
           <div class="col-md-5"></div>
           <div class="col-sm-4">
-              <input type="text" class="form-control" id="name" name="name" placeholder="Nombre del Tema..." autocomplete="off">
+              <input type="text" class="form-control" ng-model="model.name" placeholder="Nombre del Tema..." autocomplete="off">
           </div>
           <div class="col-md-5"></div>
         </div>
@@ -29,7 +29,7 @@
                 theme:'ambiance',
                 lineWrapping : true,
                 mode: 'htmlembedded'
-              }" ng-model="htmlText" 
+              }" ng-model="model.html" 
                   ng-change="preview()">
             </div>
           </section>
@@ -47,17 +47,14 @@
                 theme:'ambiance',
                 lineWrapping : true,
                 mode: 'css'
-              }" ng-model="cssControl" ng-change="preview()">
+              }" ng-model="model.css" ng-change="preview()">
             </div>
           </section>
         </div>
         <div class="col-md-1"></div>
     </div>
 
-    <div class="button" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'"
-    accept="image/*" ngf-max-size="20MB" ngf-min-height="100" 
-    ngf-resize="{width: 100, height: 100}">Select</div>
-
+    <div class="button" ngf-select="onFileSelect($file)" ng-model="model.preview_image" name="file" ngf-pattern="'image/*'" accept="image/*" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 100, height: 100}">Select</div>
     <div class="progress" style="margin-top: 20px;">
       <div class="progress-bar" progress-bar="uploadProgress" role="progressbar">
         <span ng-bind="uploadProgress"></span>
