--- a/app/components/views/partials/addTemplate.html
+++ b/app/components/views/partials/addTemplate.html
@@ -1,70 +1,139 @@
 <form id="edit-template-form" ng-submit="uploadFile()" ng-controller="TemplateController">
 
-    <input type="hidden" ng-model="model.sesion_id" name="X-Session-Id" id="X-Session-Id"> 
-    <div class="row">
-        <div class="form-group"> 
-          <div class="col-md-5"></div>
-          <div class="col-sm-4">
-              <input type="text" class="form-control" ng-model="model.name" placeholder="Nombre del Tema..." autocomplete="off">
+<input type="hidden" ng-model="model.sesion_id" name="X-Session-Id" id="X-Session-Id"> 
+
+<div class="row">
+    <div class="form-group"> 
+      <div class="col-md-5"></div>
+      <div class="col-sm-4">
+          <input type="text" class="form-control" ng-model="model.name" placeholder="Nombre del Tema..." autocomplete="off">
+      </div>
+      <div class="col-md-5"></div>
+    </div>
+</div>
+
+<div>
+  <!-- Nav tabs -->
+  <ul class="nav nav-tabs" role="tablist">
+    <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Platilla Web</a></li>
+    <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Plantilla Móvil</a></li>
+  </ul>
+
+  <!-- Tab panes -->
+  <div class="tab-content">
+    <div role="tabpanel" class="tab-pane active" id="home">
+      <h3>Vista Previa</h3>
+      <div class="row">
+          <div class="col-md-1"></div>
+          <div class="col-md-10">
+              <iframe id="preview-iframe" style="">
+              </iframe>
           </div>
-          <div class="col-md-5"></div>
-        </div>
-    </div>
+          <div class="col-md-1"></div>
+      </div>
+      <h3>HTML</h3>
+      <div class="row code-row">
+          <div class="col-md-1"></div>
+          <div class="col-md-10">
+            <section>
+              <div id="html" ui-codemirror="{
+                  lineNumbers: true,
+                  theme:'ambiance',
+                  lineWrapping : true,
+                  mode: 'htmlembedded'
+                }" ng-model="model.html" 
+                    ng-change="preview()">
+              </div>
+            </section>
+          </div>
+          <div class="col-md-1"></div>
+      </div>
 
-    <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-10">
-            <iframe id="preview-iframe" style="">
-            </iframe>
-        </div>
-        <div class="col-md-1"></div>
-    </div>
-    <h3>HTML</h3>
-    <div class="row code-row">
-        <div class="col-md-1"></div>
-        <div class="col-md-10">
-          <section>
-            <div id="html" ui-codemirror="{
-                lineNumbers: true,
-                theme:'ambiance',
-                lineWrapping : true,
-                mode: 'htmlembedded'
-              }" ng-model="model.html" 
-                  ng-change="preview()">
-            </div>
-          </section>
-        </div>
-        <div class="col-md-1"></div>
-    </div>
+      <h3>CSS</h3>
+      <div class="row code-row">
+          <div class="col-md-1"></div>
+          <div class="col-md-10">
+            <section>
+              <div id="css-text" ui-codemirror="{
+                  lineNumbers: true,
+                  theme:'ambiance',
+                  lineWrapping : true,
+                  mode: 'css'
+                }" ng-model="model.css" ng-change="preview()">
+              </div>
+            </section>
+          </div>
+          <div class="col-md-1"></div>
+      </div>
+      
+      <input type="file" ngf-select="onFileSelect($file)" ng-model="model.preview_image" name="file" accept="image/*" required="*" class="ng-valid-pattern ng-valid-min-size ng-valid-max-size ng-valid-validate-fn ng-valid-max-height ng-valid-min-height ng-valid-max-width ng-valid-min-width ng-valid-ratio ng-valid-max-duration ng-valid-min-duration ng-valid-validate-async-fn ng-dirty ng-valid ng-valid-required">
 
-    <h3>CSS</h3>
-    <div class="row code-row">
-        <div class="col-md-1"></div>
-        <div class="col-md-10">
-          <section>
-            <div id="css-text" ui-codemirror="{
-                lineNumbers: true,
-                theme:'ambiance',
-                lineWrapping : true,
-                mode: 'css'
-              }" ng-model="model.css" ng-change="preview()">
-            </div>
-          </section>
+      <div class="progress" style="margin-top: 20px;">
+        <div class="progress-bar" progress-bar="uploadProgress" role="progressbar">
+          <span ng-bind="uploadProgress"></span>
+          <span>%</span>
         </div>
-        <div class="col-md-1"></div>
+      </div>
     </div>
+    <div role="tabpanel" class="tab-pane" id="profile">
+      <h3>Vista Previa</h3>
+      <div class="row">
+          <div class="col-md-1"></div>
+          <div class="col-md-10">
+              <iframe id="preview-iframe" style="">
+              </iframe>
+          </div>
+          <div class="col-md-1"></div>
+      </div>
+      <h3>HTML</h3>
+      <div class="row code-row">
+          <div class="col-md-1"></div>
+          <div class="col-md-10">
+            <section>
+              <div id="mobile_html" ui-codemirror="{
+                  lineNumbers: true,
+                  theme:'ambiance',
+                  lineWrapping : true,
+                  mode: 'htmlembedded'
+                }" ng-model="model.mobile_html" 
+                    ng-change="preview()">
+              </div>
+            </section>
+          </div>
+          <div class="col-md-1"></div>
+      </div>
 
-    <div class="button" ngf-select="onFileSelect($file)" ng-model="model.preview_image" name="file" ngf-pattern="'image/*'" accept="image/*" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 100, height: 100}">Select</div>
-    <div class="progress" style="margin-top: 20px;">
-      <div class="progress-bar" progress-bar="uploadProgress" role="progressbar">
-        <span ng-bind="uploadProgress"></span>
-        <span>%</span>
+      <h3>CSS</h3>
+      <div class="row code-row">
+          <div class="col-md-1"></div>
+          <div class="col-md-10">
+            <section>
+              <div id="css-text" ui-codemirror="{
+                  lineNumbers: true,
+                  theme:'ambiance',
+                  lineWrapping : true,
+                  mode: 'css'
+                }" ng-model="model.mobile_css" ng-change="preview()">
+              </div>
+            </section>
+          </div>
+          <div class="col-md-1"></div>
+      </div>
+
+      <a href="">
+        <div class="button" ngf-select="onFileSelect($file)" ng-model="model.mobile_preview_image" name="file" ngf-pattern="'image/*'" accept="image/*" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 100, height: 100}">Subir vista previa móvil</div>
+      </a> 
+      <div class="progress" style="margin-top: 20px;">
+        <div class="progress-bar" progress-bar="uploadProgress" role="progressbar">
+          <span ng-bind="uploadProgress"></span>
+          <span>%</span>
+        </div>
       </div>
     </div>
 
-    <div class="row">
-        <div class="col-md-6">
-            <button type="submit" class="btn btn-primary btn-sm" id="edit-template-save-btn">Save</button>
-        </div>
-    </div>
+      <div class="col-md-6">
+          <button type="submit" class="btn btn-primary btn-sm" id="edit-template-save-btn">Guardar</button>
+      </div>
+  </div>
+</div>
 </form>
