--- a/app/components/views/partials/addTemplate.html
+++ b/app/components/views/partials/addTemplate.html
@@ -6,7 +6,7 @@
     <div class="form-group"> 
       <div class="col-md-5"></div>
       <div class="col-sm-4">
-          <input type="text" class="form-control" ng-model="model.name" placeholder="Nombre del Tema..." autocomplete="off">
+          <input type="text" class="form-control" required="*" ng-model="model.name" placeholder="Nombre del Tema..." autocomplete="off">
       </div>
       <div class="col-md-5"></div>
     </div>
