--- a/app/components/views/partials/side-bar.html
+++ b/app/components/views/partials/side-bar.html
@@ -19,7 +19,8 @@
               <div ng-switch-when="true" class="">
                 <li><a ng-href="/user/list"><span style="margin-left: 15px;">Ver usuarios</span></a></li>
                 <li><a ng-href="/template/add"><span style="margin-left: 15px;">Agregar plantilla</span></a></li>
-                <li><a ng-href="/template/edit/27"><span style="margin-left: 15px;">Modificar plantilla #27</span></a></li>
+                <!--<li><a ng-href="/template/edit/27"><span style="margin-left: 15px;">Modificar plantilla #27</span></a></li>-->
+				<li><a ng-href="/template/lst"><span style="margin-left: 15px;">Lista Templates</span></a></li>
               </div>
             </div>
                 
