--- a/app/components/views/partials/side-bar.html
+++ b/app/components/views/partials/side-bar.html
@@ -5,8 +5,10 @@
           <!-- user panel (Optional) -->
           <div class="user-panel">
             <div class="pull-left image">
-                <img src="/resources/dist/img/user2-160x160.jpg" class="img-circle"
+			<img ng-src="{{API_url}}/{{userImage}}" class="img-circle"
               alt="User Image" style="max-width: none; margin-left: 10%"/>
+                <!--<img src="/resources/dist/img/user2-160x160.jpg" class="img-circle"
+              alt="User Image" style="max-width: none; margin-left: 10%"/>-->
             </div>
             <div class="pull-left info"></div>
           </div><!-- /.user-panel -->
