Ultimos Cambios Presentación

--- a/app/components/views/partials/lstTemplate.html
+++ b/app/components/views/partials/lstTemplate.html
@@ -33,7 +33,7 @@
 						  <td><span>{{ temp.name }}</span></td>
 						  <td>
 							<!--<a href="#" ng-click="enable(temp.id)">Enable</a> | <a href="#" ng-click="disable(temp.id)">Disable</a>-->
-							<a id="enableControl_{{temp.id}}" href="#" ng-click='changeStatus(this)'>{{temp.is_disabled == true ? 'Enable' : 'Disable'}}</a>
+							<a id="enableControl_{{temp.id}}" href="#" ng-click='changeStatus(this)'>{{temp.is_disabled == true ? 'Habilitar' : 'Deshabilitar'}}</a>
 							<!--a id="disableControl_{{temp.id}}" href="#" ng-hide="temp.is_disabled" ng-click='disable(temp.id, "disableControl_{{temp.id}}")'>Disable</a-->
 						  </td>
 						</tr>
