--- a/app/components/views/partials/side-bar.html
+++ b/app/components/views/partials/side-bar.html
@@ -5,7 +5,7 @@
           <!-- user panel (Optional) -->
           <div class="user-panel">
             <div class="pull-left image">
-			<img ng-src="{{API_url}}/{{userImage}}" class="img-circle"
+			<img ng-src="{{userImage}}" class="img-circle"
               alt="User Image" style="max-width: none; margin-left: 10%"/>
                 <!--<img src="/resources/dist/img/user2-160x160.jpg" class="img-circle"
               alt="User Image" style="max-width: none; margin-left: 10%"/>-->
@@ -22,7 +22,7 @@
                 <li><a ng-href="/user/list"><span style="margin-left: 15px;">Ver usuarios</span></a></li>
                 <li><a ng-href="/template/add"><span style="margin-left: 15px;">Agregar plantilla</span></a></li>
                 <!--<li><a ng-href="/template/edit/27"><span style="margin-left: 15px;">Modificar plantilla #27</span></a></li>-->
-				<li><a ng-href="/template/lst"><span style="margin-left: 15px;">Lista Templates</span></a></li>
+				<li><a ng-href="/template/lst"><span style="margin-left: 15px;">Ver plantillas</span></a></li>
               </div>
             </div>
                 
