--- a/app/components/views/headers/header.html
+++ b/app/components/views/headers/header.html
@@ -8,7 +8,7 @@
         <li class="dropdown user user-menu">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <!--<img src="/resources/dist/img/user2-160x160.jpg" class="user-image" alt="User Image"/>-->
-			<img ng-src="{{API_url}}/{{userImage}}" class="user-image" alt="User Image"/>
+			<img ng-src="{{userImage}}" class="user-image" alt="User Image"/>
             <span class="hidden-xs">{{user.user_data.name}}{{' '}}{{user.user_data.lastname}}</span>
           </a>
           <ul class="dropdown-menu">
